--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,7 +5,7 @@
             <a class="toggle-link noline"><i class="fa fa-close fa-lg"></i></a>
             <ul>
                 <li>
-                    <a class="homelink" href="{{ site.baseurl | replace: '//', '/' }}/">Home</a>
+                    <a class="homelink" href="{{ site.baseurl | replace: '//', '/' }}/">首页</a>
                 </li>
                 <li>
                     <a href="{{ site.baseurl | replace: '//', '/' }}/archive">Archive</a>
