--- a/_layouts/post-full.html
+++ b/_layouts/post-full.html
@@ -26,9 +26,9 @@
                                     <iframe src="https://www.youtube.com/embed/{{page.yt-video-id}}?feature=player_detailpage" allowfullscreen></iframe>
                                 </div>
                             {% endif %}
-                        {% elsif page.type == "image" or page.type == "gallery" %}
+                        {% elsif page.type == "image" %}
                             {% if page.featimg %}
-                                <img class="featimg" src="{{ site.media_folder | prepend: site.baseurl | replace: '//', '/'}}/{{ page.featimg }}" alt="{{ page.featimg }}">
+                                <img class="featimg" src="{{ page.featimg }}">
                             {% endif %}
                         {% elsif page.type == "audio" %}
                             {% if page.audio-embed %}
