--- a/_layouts/post-material-sidebar-right.html
+++ b/_layouts/post-material-sidebar-right.html
@@ -27,7 +27,7 @@
                             {% endif %}
                         {% elsif page.type == "image" or page.type == "gallery" %}
                             {% if page.featimg %}
-                                <img class="featimg" src="{{ site.media_folder | prepend: site.baseurl | replace: '//', '/'}}/{{ page.featimg }}" alt="{{ page.featimg }}">
+                                <img class="featimg" src="{{ page.featimg }}">
                             {% endif %}
                         {% elsif page.type == "audio" %}
                             {% if page.audio-embed %}
