--- a/_layouts/page-classic-sidebar-right.html
+++ b/_layouts/page-classic-sidebar-right.html
@@ -15,7 +15,7 @@
                 <div class="content-container">
                     <article>
                         {% if page.featimg %}
-                            <img class="featimg" src="{{ site.media_folder | prepend: site.baseurl | replace: '//', '/'}}/{{ page.featimg }}" alt="{{ page.featimg }}">
+                            <img class="featimg" src="{{ page.featimg }}">
                         {% endif %}
 
                         <h1 class="page-title">
