--- a/_layouts/post-classic-sidebar-left.html
+++ b/_layouts/post-classic-sidebar-left.html
@@ -47,7 +47,7 @@
                         </div>
                         {% if page.type == "standard" %}
                             {% if page.featimg %}
-                                <img class="featimg" src="{{ site.media_folder | prepend: site.baseurl | replace: '//', '/'}}/{{ page.featimg }}" alt="{{ page.featimg }}">
+                                <img class="featimg" src="{{ page.featimg }}">
                             {% endif %}
                         {% endif %}
                         <div class="post-content">
