article_index.html 修改img src

--- a/_includes/article_index.html
+++ b/_includes/article_index.html
@@ -25,12 +25,8 @@
         {% else %}
             {% if post.featimg %}
                 <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/'}}" class="noline">
-                    {% if post.featimg contains '.png'%}
-                    {% assign thumb = post.featimg | replace: '.png', '' %}
-                    <img src="{{ site.media_folder | prepend: site.baseurl | replace: '//', '/'}}/crops/450x253/{{ thumb | append: '-450x253.png' }}" alt="{{ thumb }}">
-                    {% elsif post.featimg contains '.jpg'%}
-                    {% assign thumb = post.featimg | replace: '.jpg', '' %}
-                        <img src="{{ site.media_folder | prepend: site.baseurl | replace: '//', '/'}}/crops/450x253/{{ thumb | append: '-450x253.jpg' }}" alt="{{ thumb }}">
+                    {% if post.featimg %}
+                        <img src="{{ post.featimg }}">
                     {% endif %}
                 </a>
             {% endif %}
@@ -38,12 +34,8 @@
     {% else %}
         {% if post.featimg %}
                 <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/'}}" class="noline">
-                    {% if post.featimg contains '.png'%}
-                    {% assign thumb = post.featimg | replace: '.png', '' %}
-                    <img src="{{ site.media_folder | prepend: site.baseurl | replace: '//', '/'}}/crops/450x253/{{ thumb | append: '-450x253.png' }}" alt="{{ thumb }}">
-                    {% elsif post.featimg contains '.jpg'%}
-                    {% assign thumb = post.featimg | replace: '.jpg', '' %}
-                        <img src="{{ site.media_folder | prepend: site.baseurl | replace: '//', '/'}}/crops/450x253/{{ thumb | append: '-450x253.jpg' }}" alt="{{ thumb }}">
+                   {% if post.featimg %}
+                        <img src="{{ post.featimg }}">
                     {% endif %}
                 </a>
         {% endif %}
