--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -3,7 +3,7 @@
     {% for gallery in page.gallery %}
         {% for image in gallery.images %}
             <b>{{ image.alttext }}</b>
-            <img src="{{ site.media_folder | prepend: site.baseurl | replace: '//', '/'}}/{{ image.filename }}" alt="{{ image.alttext }}">
+            <img src="{{ image.filename }}" alt="{{ image.alttext }}">
         {% endfor %}
     {% endfor %}
 </div>
