测试外联音乐

--- a/_includes/music.html
+++ b/_includes/music.html
@@ -1,6 +1,6 @@
 <!--在2015-0206-gallery.md 文件中 music: 填写网易云音乐分享html 代码即可-->
 
-<div>
+<div class="music">
     {% if page.music %}
         {{ page.music }}
     {% endif %}
