测试外联音乐

--- a/_includes/music.html
+++ b/_includes/music.html
@@ -2,6 +2,6 @@
 
 <div class="music">
     {% if page.music %}
-        {{ page.music }}
+        <div>{{ page.music }}</div>
     {% endif %}
 </div>
