--- a/_includes/article_index.html
+++ b/_includes/article_index.html
@@ -46,6 +46,6 @@
     </a>
     <p class="post-content">{{ post.content | strip_html | truncatewords: 15 }}</p>
     <p class="actions">
-        <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/'}}">Read More</a>
+        <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/'}}">查看全文</a>
     </p>
 </article>
