--- a/_includes/article_index.html
+++ b/_includes/article_index.html
@@ -2,6 +2,21 @@
     this is the complete index for articles, as you can see it on the index page.
     Every Post type get's their own little settings.
 -->
+<style type="text/css">
+
+.view-more{
+    float:right;
+}
+
+
+
+
+
+</style>
+
+
+
+
 <article>
     {% if post.homedisplay == "iframe" %}
         {% if post.type == "vimeo" %}
@@ -44,8 +59,8 @@
     <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/'}}">
         <h1>{{ post.title }}</h1>
     </a>
-    <p class="post-content">{{ post.content | strip_html | truncatewords: 15 }}</p>
-    <p class="actions">
+    <p class="post-content">{{ post.content | strip_html | truncatewords: 30 }}</p>
+    <p class="actions view-more">
         <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/'}}">查看全文</a>
     </p>
 </article>
