列表页面分割线

--- a/_includes/article_index.html
+++ b/_includes/article_index.html
@@ -54,7 +54,7 @@
         <h1>{{ post.title }}</h1>
     </a>
     <p class="post-content">{{ post.content | strip_html | truncatewords: 30 }}</p>
-    <p class="actions view-more">
-        <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/'}}">查看全文</a>
+    <p class="actions">
+        <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/'}}" class="view-more">查看全文</a>
     </p>
 </article>
