查看更多距离上面调整

--- a/_includes/article_index.html
+++ b/_includes/article_index.html
@@ -7,7 +7,10 @@
 .view-more{
     float:right;
     padding-bottom:10px;
-    padding-top:0px;
+}
+
+.view-more-hold{
+    padding-top:5px;
 }
 
 </style>
@@ -56,7 +59,7 @@
         <h1>{{ post.title }}</h1>
     </a>
     <p class="post-content">{{ post.content | strip_html | truncatewords: 30 }}</p>
-    <p class="actions">
+    <p class="actions view-more-hold">
         <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/'}}" class="view-more">查看全文</a>
     </p>
 </article>
