调整视频比例详情页面

--- a/_layouts/post-full.html
+++ b/_layouts/post-full.html
@@ -16,7 +16,7 @@
                     <article>
                         {% if page.type == "vimeo" %}
                             {% if page.vimeo-embed %}
-                                <div class="video-container">
+                                <div class="video-container-detail">
                                     {{ page.vimeo-embed }}
                                 </div>
                             {% endif %}
