--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="content">
-        <span>&copy; gridster</span>
-        <span class="backtotop">back to top</span>
+        <span>&copy; 业力实验室</span>
+        <span class="backtotop">回到顶部</span>
     </div>
 </footer>
 <script src="{{ site.baseurl | replace: '//', '/' }}/js/build/global.min.js"></script>
