修改导航栏文字

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,35 +5,19 @@
             <a class="toggle-link noline"><i class="fa fa-close fa-lg"></i></a>
             <ul>
                 <li>
-                    <a class="homelink" href="{{ site.baseurl | replace: '//', '/' }}/">首页</a>
+                    <a class="homelink" href="{{ site.baseurl | replace: '//', '/' }}/">博客首页</a>
                 </li>
                 <li>
-                    <a href="{{ site.baseurl | replace: '//', '/' }}/archive">Archive</a>
+                    <a href="{{ site.baseurl | replace: '//', '/' }}/archive">内容目录</a>
                 </li>
                 <li>
                     <a href="{{ site.baseurl | replace: '//', '/' }}/typography">Typography</a>
                 </li>
                 <li><a class="dropdown-button" href="#" data-activates='drop-example'>Page Layouts&nbsp;&nbsp;<i class="fa fa-caret-down"></i></a>
                 </li>
-                <div id="drop-example" class="dropdown-content">
-                    <li>
-                        <a href="/page-full">page-full</a>
-                    </li>
-                    <li>
-                        <a href="/page-classic-sidebar-right">page classic sidebar right</a>
-                    </li>
-                    <li>
-                        <a href="/page-classic-sidebar-left">page classic sidebar left</a>
-                    </li>
-                    <li>
-                        <a href="/page-material-sidebar-right">page material sidebar right</a>
-                    </li>
-                    <li>
-                        <a href="/page-material-sidebar-left">page material sidebar left</a>
-                    </li>
-                </div>
+
                 <li>
-                    <a href="#colorswitch" class="modal-trigger">Change Colors <i class="fa fa-cog"></i></a>
+                    <a href="#colorswitch" class="modal-trigger">切换主题</a>
                 </li>
             </ul>
         </nav>
