修改导航栏文字

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,12 +8,7 @@
                     <a class="homelink" href="{{ site.baseurl | replace: '//', '/' }}/">博客首页</a>
                 </li>
                 <li>
-                    <a href="{{ site.baseurl | replace: '//', '/' }}/archive">内容目录</a>
-                </li>
-                <li>
-                    <a href="{{ site.baseurl | replace: '//', '/' }}/typography">Typography</a>
-                </li>
-                <li><a class="dropdown-button" href="#" data-activates='drop-example'>Page Layouts&nbsp;&nbsp;<i class="fa fa-caret-down"></i></a>
+                    <a href="{{ site.baseurl | replace: '//', '/' }}/archive">文章目录</a>
                 </li>
 
                 <li>
