--- a/_layouts/post-full.html
+++ b/_layouts/post-full.html
@@ -53,27 +53,12 @@
                         <div class="post-content">
                             {{ content }}
                         </div>
-                        {% if page.category or page.tags %}
-                        <div class="catsandtags">
-                            {% if page.category %}
-                            <span class="category">
-                                <span class="name">categories:</span>
-                                {{ page.categories | category_links }}
-                            </span>
-                            {% endif %}
-                            {% if page.category and page.tags %}
-                                &bull;
-                            {% endif %}
-                            {% if page.tags %}
-                            <span class="tags">
-                                <span class="name">tags:</span>
-                                {% for tag in page.tags %}
-                                    <a href="{{ site.tag_dir | prepend: site.baseurl | replace: '//', '/' }}/{{ tag }}">{{ tag }}</a>
-                                {% endfor %}
-                            </span>
-                            {% endif %}
-                        </div>
-                        {% endif %}
+
+                        <div style="text-align:center">
+                          <img id="mycode" src="http://upload-images.jianshu.io/upload_images/1271438-542ac494fd8dd394.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240/format/jpg">
+                          <p style="font:14px;margin-top:-10px;">欢迎关注业力实验室微信公众号</p>
+                        <div>
+
                     </article>
                     <div class="post-nav">
                         {% if page.previous.url %}
