判断 <span class="date">

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,7 +8,7 @@
                     <a class="homelink" href="{{ site.baseurl | replace: '//', '/' }}/">博客首页</a>
                 </li>
                 <li>
-                    <a href="{{ site.baseurl | replace: '//', '/' }}/archive">文章目录</a>
+                    <a href="{{ site.baseurl | replace: '//', '/' }}/archive">目录</a>
                 </li>
 
             </ul>
