判断发布时间是否为空

--- a/_layouts/post-full.html
+++ b/_layouts/post-full.html
@@ -40,10 +40,10 @@
                             {{ page.title }}
                         </h2>
                         <div class="meta">
-                            {% include author.html%} &bull;
+                            {% include author.html%}
                             {% if page.date %}
                              <span class="date">
-                                Published on {{ page.date | date: '%B %d, %Y' }}
+                                 &bull;Published on {{ page.date | date: '%B %d, %Y' }}
                             </span>
                             {% endif %}
                         </div>
