添加关于界面

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,6 +10,9 @@
                 <li>
                     <a href="{{ site.baseurl | replace: '//', '/' }}/archive">目录</a>
                 </li>
+                <li>
+                    <a href="{{ site.baseurl | replace: '//', '/' }}/about">关于</a>
+                </li>
 
             </ul>
         </nav>
