--- a/_includes/author.html
+++ b/_includes/author.html
@@ -9,7 +9,7 @@
     <span class="author">Posted by
         {% assign the_author = site.data.authors | where: 'id', author %}
         {% for author in the_author %}
-            <a href="#">
+            <a href="{{ site.baseurl | replace: '//', '/' }}/about">
                 {% if author.name %}
                     {{ author.name }}
                 {% else %}
