--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
-</body>
-</html>
+
+<!-- Archive listing posts by year -->
+<ul class="archive">
+  {% for post in site.posts %}
+    {% unless post.next %}
+        <h5>{{ post.date | date: '%Y' }}</h5>
+    {% else %}
+        {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
+        {% capture nyear %}{{ post.next.date | date: '%Y' }}{% endcapture %}
+        {% if year != nyear %}
+            <h5>{{ post.date | date: '%Y' }}</h5>
+        {% endif %}
+    {% endunless %}
+    <li><span class="date">{{ post.date | date:"%d. %b" }}</span> <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/'}}">{{ post.title }}</a></li>
+  {% endfor %}
+</ul>
