--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,17 +1,18 @@
+<style type="text/css">
+    .about{
+        text-align:center;
+        background: url(http://upload-images.jianshu.io/upload_images/1271438-23d299b3ddbd6ccc.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240) no-repeat;
+    }
 
 
-<!-- Archive listing posts by year -->
-<ul class="archive">
-  {% for post in site.posts %}
-    {% unless post.next %}
-        <h5>{{ post.date | date: '%Y' }}</h5>
-    {% else %}
-        {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
-        {% capture nyear %}{{ post.next.date | date: '%Y' }}{% endcapture %}
-        {% if year != nyear %}
-            <h5>{{ post.date | date: '%Y' }}</h5>
-        {% endif %}
-    {% endunless %}
-    <li><span class="date">{{ post.date | date:"%d. %b" }}</span> <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/'}}">{{ post.title }}</a></li>
-  {% endfor %}
-</ul>
+</style>
+
+
+<div class="about">
+
+
+
+
+
+
+</div>
