--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,6 +2,8 @@
     .about{
         text-align:center;
         background: url(http://upload-images.jianshu.io/upload_images/1271438-23d299b3ddbd6ccc.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240) no-repeat;
+        width: 100%;
+        height: auto;
     }
 
 
