--- a/_includes/about.html
+++ b/_includes/about.html
@@ -14,7 +14,7 @@
 
     <h1>自我介绍</h1>
 
-
+<p> 世间已然发生或即将来临的一切，但凡要使我失落痛苦，我都回报三个字：不值得。 ☰ 前些天，朱茵上了一档主打回忆杀的综艺，和薛之谦配戏，重现至尊宝和紫霞在城楼上的经典。时隔23年...</p>
 
 
 </div>
