--- a/_includes/full.html
+++ b/_includes/full.html
@@ -1,11 +1,42 @@
 <!-- full logo version with slogan, icon and text, add the class .ts-full if you want to work with some of the existing CSS -->
-   <div class="ts-full">
+<style type="text/css">
 
-        <img src="http://upload-images.jianshu.io/upload_images/1271438-a2a58162684a9b36.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240" class="icon">
+    .title-full{
+        max-width:700px;
+        width:80%;
 
-        <p class="gridster">业力实验室</p>
-        <div class="slogan">
-            <p>the material experience for jekyl撒地方撒地方l</p>
+    }
+    .icon-img{
+        width: 150px;
+        height: 150px;
+        position: absolute;
+        left: 0px;
+        width: 150px;
+    }
+    .yelilab-hold{
+        margin-left: 150px;
+        padding-top: 20px;
+
+    }
+    .yeli-lab{
+        font-style:italic;
+        font-size: 50px;
+        font-weight: 900;
+        margin: 0px;
+    }
+    .lab-desc{
+        margin: 0px;
+    }
+
+</style>
+
+
+<div class="title-full">
+
+        <img src="http://upload-images.jianshu.io/upload_images/1271438-a2a58162684a9b36.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240" class="icon-img">
+        <div class="yelilab-hold">
+            <p class="yeli-lab">业力实验室</p>
+            <p class="lab-desc">Welcome to yeli-lab's blog！My website is publish at:http://yeli.photo</p>
+
         </div>
-
 </div>
