--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,20 @@
+
+
+
+<style type="text/css">
+    .title-click{
+        width:100%;
+        height:auto;
+    }
+
+
+</style>
+
+
+
+
 <div class="row">
-    <a href="{{ site.baseurl | replace: '//', '/' }}/" class="logo noline">
+    <a href="{{ site.baseurl | replace: '//', '/' }}/" class="title-click">
         {% include full.html %}
         {% include logo.html %}
         {% include icon.html %}
