--- a/_includes/full.html
+++ b/_includes/full.html
@@ -1,22 +1,17 @@
 <!-- full logo version with slogan, icon and text, add the class .ts-full if you want to work with some of the existing CSS -->
 <style type="text/css">
 
-    .title-full{
-        max-width:700px;
-        width:80%;
-
+     .title-full{
+        margin-right: 20%;
+        margin-left: 30%;
     }
     .icon-img{
         width: 150px;
         height: 150px;
-        position: absolute;
-        left: 0px;
-        width: 150px;
+        float: left;
     }
     .yelilab-hold{
-        margin-left: 150px;
         padding-top: 20px;
-
     }
     .yeli-lab{
         font-style:italic;
