--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
 <div class="row">
     <a href="{{ site.baseurl | replace: '//', '/' }}/" class="title-click">
         {% include full.html %}
-        {% include logo.html %}
-        {% include icon.html %}
+        <!--{% include logo.html %}-->
+        <!--{% include icon.html %}-->
     </a>
 </div>
