适配我的手机-标题

--- a/_includes/full.html
+++ b/_includes/full.html
@@ -1,5 +1,6 @@
 <!-- full logo version with slogan, icon and text, add the class .ts-full if you want to work with some of the existing CSS -->
 
+
   <style type="text/css">
   .body{
 
@@ -43,7 +44,7 @@
 
     }
     @media screen and (max-width: 520px){
-        .title-full{margin-left: 15%}
+        .title-full{margin-left: 15%;margin-right: 10%;}
         .yelilab-hold{padding-top: 17px;}
         .icon-img{width: 90px;height: 90px;}
         .yeli-lab{font-size: 32px;font-weight: 570;}
@@ -51,15 +52,15 @@
     @media screen and (max-width: 414px){
         .title-full{margin-left: 17%}
         .yelilab-hold{padding-top: 15px;}
-        .icon-img{width: 85px;height: 85px;}
-        .yeli-lab{font-size: 30px;font-weight: 550;}
+        .icon-img{width: 80px;height: 80px;}
+        .yeli-lab{font-size: 28px;font-weight: 560;}
 
     }
     @media screen and (max-width: 375px){
-        .title-full{margin-left: 15%}
+        .title-full{margin-left: 15%;}
         .yelilab-hold{padding-top: 12px;}
         .icon-img{width: 75px;height: 75px;}
-        .yeli-lab{font-size: 30px;font-weight: 550;}
+        .yeli-lab{font-size: 26px;font-weight: 540;}
     }
     @media screen and (max-width: 320px){
         .title-full{margin-left: 17%}
@@ -67,7 +68,6 @@
         .icon-img{width: 60px;height: 60px;}
         .yeli-lab{font-size: 23px;font-weight: 500;}
     }
-
 
 </style>
 
