--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 <title>{{ site.name }}{% if page.title %} - {{ page.title }} {% endif%}</title>
 {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
 <meta content='width=device-width, initial-scale=1, maximum-scale=1' name='viewport'/>
-<meta name="kewords" content="户外，游记，摄影，摄像，编程，笔记，iOS,python,Django,前端,博客,业力实验室,yeli.photo,Linux,叶业力,www.yeli.photo,微信公众号"/>
+<meta name="keywords" content="户外,游记,摄影,摄像,编程,笔记,程序员,机器学习,ML,深度学习,成都,码农,iOS,python,Django,前端,博客,业力实验室,yeli.photo,Linux,叶业力,www.yeli.photo,微信公众号,拍照,露营,吉他,骑行"/>
 <meta name="author" content="叶业力,yeliphoto@qq.com"/>
 <meta name="copyright" content="业力实验室"/>
 <meta http-equiv="Window-target" content="_top">
