--- a/_includes/article_index.html
+++ b/_includes/article_index.html
@@ -45,7 +45,7 @@
     <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/'}}">
         <h1>{{ post.title }}</h1>
     </a>
-    <p class="post-content">{{ post.content | strip_html | truncatewords: 25 }}</p>
+    <p class="post-content">{{ post.content | strip_html | truncate: 25 }}</p>
     <p class="actions">
         <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/'}}">查看全文</a>
     </p>
