--- a/_layouts/post-full.html
+++ b/_layouts/post-full.html
@@ -56,9 +56,9 @@
                             {{ content }}
                         </div>
 
-                        {{ if page.title!="目录" }}
-                            {% include web-share.html %}
-                        {{ endif }}
+                        {% if page.title != "目录" %}
+                           <div style="text-align:left;padding-left:20px;"> {% include web-share.html %} </div>
+                        {% endif %}
 
                         <div style="text-align:center">
                           <img style="width: 150px;height: 150px;" src="http://upload-images.jianshu.io/upload_images/1271438-542ac494fd8dd394.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240/format/jpg">
