调整分享按钮位置

--- a/_layouts/post-full.html
+++ b/_layouts/post-full.html
@@ -57,7 +57,7 @@
                         </div>
 
                         {% if page.title != "目录" %}
-                           <div style="text-align:left;margin: 20px;"> {% include web-share.html %} </div>
+                           <div style="text-align:left;margin-top: 30px;margin-bottom: 50px;"> {% include web-share.html %} </div>
                         {% endif %}
 
                         <div style="text-align:center">
