--- a/_includes/web-share.html
+++ b/_includes/web-share.html
@@ -12,9 +12,9 @@
 </div>
 <script type="text/javascript" >
 var jiathis_config={
-     url:"http://yexianyong.win",
-     summary:"我是分享说明。。。",
-     title:"标题 ##",
+     url:window.location.href,
+     summary:"{{ post.content | strip_html | truncate: 65 }}",
+     title:"{{ page.title }}",
      pic:"http://upload-images.jianshu.io/upload_images/1271438-542ac494fd8dd394.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240/format/jpg",
      ralateuid:{
         "tsina":"weibo.com/yeliphoto"
