--- a/_includes/web-share.html
+++ b/_includes/web-share.html
@@ -13,7 +13,7 @@
 <script type="text/javascript" >
 var jiathis_config={
      url:window.location.href,
-     summary:document.getElementById("summary"),
+     summary:document.getElementById("summary").value,
      title:"{{ page.title }}",
      pic:"http://upload-images.jianshu.io/upload_images/1271438-542ac494fd8dd394.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240/format/jpg",
      ralateuid:{
