--- a/_includes/web-share.html
+++ b/_includes/web-share.html
@@ -12,14 +12,14 @@
 <script type="text/javascript" >
 var jiathis_config={
      url:window.location.href,
-     summary:{{ content }},
+     summary:{{ content | strip_html | truncate: 30 }},
      title:"{{ page.title }}",
      pic:"http://upload-images.jianshu.io/upload_images/1271438-542ac494fd8dd394.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240/format/jpg",
      ralateuid:{
         "tsina":"weibo.com/yeliphoto"
      },
-     shortUrl:false,
-     hideMore:false
+     shortUrl:true,
+     hideMore:true,
 }
 </script>
 <script type="text/javascript" src="http://v3.jiathis.com/code_mini/jia.js" charset="utf-8"></script>
