--- a/_includes/web-share.html
+++ b/_includes/web-share.html
@@ -12,7 +12,7 @@
 <script type="text/javascript" >
 var jiathis_config={
      url:window.location.href,
-     summary:{{ content | strip_html | truncate: 30 }},
+     summary:"{{ content | strip_html | truncate: 30 }}",
      title:"{{ page.title }}",
      pic:"http://upload-images.jianshu.io/upload_images/1271438-542ac494fd8dd394.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240/format/jpg",
      ralateuid:{
