小屏幕隐藏分享

--- a/_layouts/post-full.html
+++ b/_layouts/post-full.html
@@ -2,6 +2,14 @@
 <html>
     <head>
         {% include head.html %}
+        <style type="text/css">
+
+            @media screen and (max-width: 500px){
+                .share-hold{display:none;}
+            }
+
+        </style>
+
     </head>
 
     <body>
@@ -57,7 +65,7 @@
                         </div>
 
                         {% if page.title != "目录" %}
-                            <div style="text-align:left;margin-top: 20px;margin-bottom: 70px;"> {% include web-share.html %} </div>
+                            <div class="share-hold" style="text-align:left;margin-top: 20px;margin-bottom: 70px;"> {% include web-share.html %} </div>
                             <div style="text-align:center">
                                 <img style="width: 150px;height: 150px;" src="http://upload-images.jianshu.io/upload_images/1271438-542ac494fd8dd394.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240/format/jpg">
                                 <p style="font-size:14px;margin-top:-10px;">欢迎关注业力实验室微信公众号</p>
