--- a/_layouts/post-full.html
+++ b/_layouts/post-full.html
@@ -65,8 +65,8 @@
                         </div>
 
                         {% if page.title != "目录" %}
-                            <div class="share-hold" style="text-align:left;margin-top: 20px;margin-bottom: 70px;"> {% include web-share.html %} </div>
-                            <div style="text-align:center">
+                            <div class="share-hold" style="text-align:left;margin-top: 20px;margin-bottom: 40px;"> {% include web-share.html %} </div>
+                            <div style="text-align:center;margin-top: 30px;">
                                 <img style="width: 150px;height: 150px;" src="http://upload-images.jianshu.io/upload_images/1271438-542ac494fd8dd394.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240/format/jpg">
                                 <p style="font-size:14px;margin-top:-10px;">欢迎关注业力实验室微信公众号</p>
                             <div>
