--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,4 +11,4 @@
 <link rel="stylesheet" id="color-change" href="">
 <link rel="stylesheet" id="switch-style" href="{{ site.baseurl | replace: '//', '/' }}/css/grid.css">
 <link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.baseurl | prepend: site.url | replace: '//', '/' }}/feed.xml">
-<link rel="shortcut icon" href="{{ 'img/mylogo.ico' | prepend: site.url }}"/>
+<link rel="shortcut icon" href="{{ '/img/mylogo.ico' | prepend: site.url }}"/>
