会龙公园初次编辑

--- a/_includes/web-share.html
+++ b/_includes/web-share.html
@@ -18,7 +18,7 @@ var jiathis_config={
      ralateuid:{
         "tsina":"weibo.com/yeliphoto"
      },
-     shortUrl:true,
+     shortUrl:false,
      hideMore:true,
 }
 </script>
