--- a/_includes/web-share.html
+++ b/_includes/web-share.html
@@ -10,11 +10,22 @@
 
 </div>
 <script type="text/javascript" >
+
+function get_share_pic(){
+	if ({{ page.featimg }}){
+		return {{ page.featimg }}
+	}else {
+		return "http://upload-images.jianshu.io/upload_images/1271438-542ac494fd8dd394.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240/format/jpg"
+	}
+}
+
+var share_pic=get_share_pic()
+
 var jiathis_config={
      url:window.location.href,
      summary:"{{ content | strip_html | truncate: 30 }}",
      title:"{{ page.title }}",
-     pic:"http://upload-images.jianshu.io/upload_images/1271438-542ac494fd8dd394.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240/format/jpg",
+     pic:share_pic,
      ralateuid:{
         "tsina":"weibo.com/yeliphoto"
      },
