--- a/_includes/web-share.html
+++ b/_includes/web-share.html
@@ -14,7 +14,10 @@
 function get_share_pic(){
 	if ("{{ page.featimg }}"){
 		return "{{ page.featimg }}"
-	}else {
+	}else if ("{{ page.share-pic }}"){
+		return  "{{ page.share-pic }}"
+	} 
+	else {
 		return "http://upload-images.jianshu.io/upload_images/1271438-542ac494fd8dd394.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240/format/jpg"
 	}
 }
