修改导航栏颜色#336699 所有2

--- a/sass/toolbox/_colors.scss
+++ b/sass/toolbox/_colors.scss
@@ -20,7 +20,7 @@ $red: #FF5252;
 
 //----------------------------
 
-$indigo: #3F51B5;
+$indigo: #336699;
 $darkindigo: #303F9F;
 $lightindigo: #C5CAE9;
 
