修改部分303f9f 为 336699

--- a/sass/toolbox/_colors.scss
+++ b/sass/toolbox/_colors.scss
@@ -21,7 +21,7 @@ $red: #FF5252;
 //----------------------------
 
 $indigo: #336699;
-$darkindigo: #303F9F;
+$darkindigo: #336699;
 $lightindigo: #C5CAE9;
 
 $pink: #FF4081;
