修改网站介绍字体大小为14

--- a/_includes/full.html
+++ b/_includes/full.html
@@ -26,6 +26,7 @@
     }
     .lab-desc{
         margin: 0px;
+        font-size: 14px;
     }
     @media screen and (max-width: 1600px){
         .title-full{margin-left: 30%;}
