添加有言评论

--- a/_layouts/post-full.html
+++ b/_layouts/post-full.html
@@ -66,6 +66,10 @@
 
                         {% if page.title != "目录" %}
                             <div class="share-hold" style="text-align:left;margin-top: 20px;margin-bottom: 40px;"> {% include web-share.html %} </div>
+
+                             <!-- UY BEGIN -->
+                            <div id="uyan_frame"></div>
+
                             <div style="text-align:center;margin-top: 30px;">
                                 <img style="width: 150px;height: 150px;" src="http://upload-images.jianshu.io/upload_images/1271438-542ac494fd8dd394.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240/format/jpg">
                                 <p style="font-size:14px;margin-top:-10px;">欢迎关注业力实验室微信公众号</p>
@@ -87,6 +91,7 @@
             </div>
         </div>
         {% include footer.html %}
-        
+        <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2128223"></script>
+         <!-- UY END -->
     </body>
 </html>
