--- a/_layouts/post-full.html
+++ b/_layouts/post-full.html
@@ -68,7 +68,7 @@
                             <div class="share-hold" style="text-align:left;margin-top: 20px;margin-bottom: 40px;"> {% include web-share.html %} </div>
 
                              <!-- UY BEGIN -->
-                            <div id="uyan_frame"></div>
+                            <div id="uyan_frame" style="margin-top:20px;"></div>
 
                             <div style="text-align:center;margin-top: 30px;">
                                 <img style="width: 150px;height: 150px;" src="http://upload-images.jianshu.io/upload_images/1271438-542ac494fd8dd394.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240/format/jpg">
