--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
 <meta name="author" content="叶业力,yeliphoto@qq.com"/>
 <meta name="copyright" content="业力实验室"/>
 <meta http-equiv="Window-target" content="_top">
+<meta http-equiv="Cache-Control" content="no-transform " />
 <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:500,600' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="{{ site.baseurl | replace: '//', '/' }}/css/main.css">
 <link rel="stylesheet" id="color-change" href="">
