--- a/_includes/full.html
+++ b/_includes/full.html
@@ -4,13 +4,15 @@
 
 
     .title-full{
-       display: flex;
-       color: #FF4081;
+        max-width: 800px;
+        margin: 0 auto;
+        display: flex;
+        color: #FF4081;
     }
 
     .title-full:hover{
         cursor:pointer;
-       opacity: 0.8;
+        opacity: 0.8;
     }
     .img-hold{
         flex: 1.4;
@@ -65,7 +67,6 @@
 
     @media screen and (max-width: 414px){
         .icon-img{width: 80px;height: 80px;}
-        /*.yelilab-hold{ margin-top: 13px; }*/
         .yeli-lab{font-size: 30px;font-weight: 550;}
     }
 
