--- a/_layouts/post-full.html
+++ b/_layouts/post-full.html
@@ -65,14 +65,14 @@
                         </div>
 
                         {% if page.title != "目录" %}
-                            <div class="share-hold" style="text-align:left;margin-top: 40px;margin-bottom: 40px;"> {% include web-share.html %} </div>
+                            <div class="share-hold" style="text-align:left;margin-top: 30px;"> {% include web-share.html %} </div>
 
                              <!-- UY BEGIN -->
-                            <div  style="margin-top:50px;">
+                            <div  style="margin-top:100px;">
                                 <div id="uyan_frame"></div>
                             </div>
 
-                            <div style="text-align:center;margin-top: 30px;">
+                            <div style="text-align:center;margin-top: 40px;">
                                 <img style="width: 150px;height: 150px;" src="http://upload-images.jianshu.io/upload_images/1271438-542ac494fd8dd394.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240/format/jpg">
                                 <p style="font-size:14px;margin-top:-10px;">欢迎关注业力实验室微信公众号</p>
                             <div>
