--- a/_includes/full.html
+++ b/_includes/full.html
@@ -6,6 +6,7 @@
     .title-full{
         max-width: 850px;
         margin: 0 auto;
+        display: -webkit-flex;
         display: flex;
         color: #FF4081;
     }
@@ -15,6 +16,7 @@
         opacity: 0.8;
     }
     .img-hold{
+        -webkit-flex:1.35;
         flex: 1.35;
         text-align: right;
     }
@@ -23,6 +25,7 @@
         height: 150px;
     }
     .yelilab-hold{
+        -webkit-flex:2;
         flex: 2;
         margin-top: 20px;
     }
