标题添加阴影

--- a/_includes/full.html
+++ b/_includes/full.html
@@ -9,6 +9,8 @@
         display: -webkit-flex;
         display: flex;
         color: #FF4081;
+        transition:0.2s ease-out;
+        text-shadow: 0.8px 0.8px 1px #444;
     }
 
     .title-full:hover{
