标题添加阴影3

--- a/_includes/full.html
+++ b/_includes/full.html
@@ -15,7 +15,7 @@
 
     .title-full:hover{
         cursor:pointer;
-        opacity: 0.8;
+        color: #ff5a93;
     }
     .img-hold{
         -webkit-flex:1.35;
