标题添加阴影4

--- a/_includes/full.html
+++ b/_includes/full.html
@@ -15,7 +15,7 @@
 
     .title-full:hover{
         cursor:pointer;
-        color: #ff5a93;
+        color: rgb(255,120,168);
     }
     .img-hold{
         -webkit-flex:1.35;
