修改标题阴影完成

--- a/_includes/full.html
+++ b/_includes/full.html
@@ -10,12 +10,12 @@
         display: flex;
         color: #FF4081;
         transition:0.2s ease-out;
-        text-shadow: 0.5px 0.5px 1px #666;
+        text-shadow: 0.5px 0.5px 1px #777;
     }
 
     .title-full:hover{
         cursor:pointer;
-        color: rgb(255,120,168);
+        opacity: 0.8;
     }
     .img-hold{
         -webkit-flex:1.35;
