--- a/_includes/full.html
+++ b/_includes/full.html
@@ -9,8 +9,11 @@
         display: -webkit-flex;
         display: flex;
         color: #FF4081;
+        text-shadow: 0.8px 0.8px 1px #777;
+
         transition:0.2s ease-out;
-        text-shadow: 0.5px 0.5px 1px #777;
+        transform: translate3d(0,0,0);
+        -WebKit-Transform: translate3 (0,0,0);
     }
 
     .title-full:hover{
