jiathis分享添加 百度贴吧

--- a/_includes/web-share.html
+++ b/_includes/web-share.html
@@ -7,6 +7,7 @@
 <a class="jiathis_button_weixin">微信</a>
 <a class="jiathis_button_douban">豆瓣</a>
 <a class="jiathis_button_cqq">QQ好友</a>
+<a class="jiathis_button_tieba">百度贴吧</a>
 
 </div>
 <script type="text/javascript" >
