--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,7 @@
 <meta name="copyright" content="业力实验室"/>
 <meta http-equiv="Window-target" content="_top">
 <meta http-equiv="Cache-Control" content="no-transform " />
+<meta name="baidu-site-verification" content="nGDxoOWmDc" />
 <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:500,600' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="{{ site.baseurl | replace: '//', '/' }}/css/main.css">
 <link rel="stylesheet" id="color-change" href="">
