--- a/_includes/full.html
+++ b/_includes/full.html
@@ -97,8 +97,8 @@
 
         <div class="img-hold"><img src="http://upload-images.jianshu.io/upload_images/1271438-a2a58162684a9b36.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240" class="icon-img"></div>
         <div class="yelilab-hold">
-            <p class="yeli-lab">业力实验室</p>
-            <p class="lab-desc">此博客主要是收集我的户外游记、摄影摄像作品, 以及编程笔记</p>
+            <p class="yeli-lab">叶业力博客</p>
+            <p class="lab-desc">此博客不再更新，请访问 http://yeli.studio</p>
 
         </div>
         <div class="right-padding"></div>
