--- a/_includes/full.html
+++ b/_includes/full.html
@@ -93,12 +93,12 @@
 
 </style>
 
-<div class="title-full">
+<div class="title-full" href="http://blog.xander-ye.com" target="_black">
 
         <div class="img-hold"><img src="http://upload-images.jianshu.io/upload_images/1271438-a2a58162684a9b36.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240" class="icon-img"></div>
         <div class="yelilab-hold">
-            <p class="yeli-lab">Yeli Photo</p>
-            <p class="lab-desc">此博客不再更新，请访问 http://yeli.studio</p>
+            <p class="yeli-lab">Yeli Studio</p>
+            <p class="lab-desc">此博客不再更新，请访问 http://blog.xander-ye.com</p>
 
         </div>
         <div class="right-padding"></div>
